<resources>
    <string name="app_name">Fitness Goal 2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="Objetivos">Objetivos</string>
    <string name="Alimentacion">Alimentación</string>
    <string name="Alimentos">Alimentos</string>
    <string name="Ejercicios">Ejercicios</string>
    <string name="Reportes">Reportes</string>
    <string name="Configuracion">Configuración</string>
    <string name="Acerca_de">Acerca de</string>

    <string name="Registros">Registros</string>
    <string name="Recetas">Recetas</string>
    <string name="Agregar_Alimento">Agregar Alimento</string>
    <string name="Ingresar_Receta">Ingresar Receta</string>
    <string name="Categoria_Alimentos">Categoria Alimentos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
