<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_objetivos"
            android:icon="@drawable/ic_objetivos_24"
            android:title="@string/Objetivos" />
        <item
            android:id="@+id/nav_alimentacionMenu"
            android:icon="@drawable/ic_comida_24"
            android:title="@string/Alimentacion" />
        <item
            android:id="@+id/nav_ejercicios"
            android:icon="@drawable/ic_ejercicio_24"
            android:title="@string/Ejercicios" />
        <item
            android:id="@+id/nav_reportes"
            android:icon="@drawable/ic_informes_24"
            android:title="@string/Reportes" />
    </group>
</menu>
